# macrolens

./: pyproject.toml
experiments/: adversarial_prompting.py  history_browser.py
experiments/conf/: adversarial_prompting.yaml
macrolens/adversarial_prompting/: results_browser.py
macrolens/agents/: gymnasium.py
macrolens/environments/: adversarial_prompting.py
macrolens/hallucination_detection/: __main__.py
