[tool.poetry]
name = "macrolens"
version = "0.1.0"
description = ""
authors = ["Jason Hoelscher-Obermaier <jason.hoelscherobermaier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.136"
transformers = "^4.30.2"
tqdm = "^4.65.0"
gymnasium = "^0.28.1"
pettingzoo = "^1.23.1"
python-dotenv = "^1.0.0"
querychains = {git = "ssh://git@github.com/acsresearch/querychains.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
